# self-repo-task

./: .gitignore  DEPLOYMENT.md  HETZNER_SETUP.md  IMPROVEMENTS.md  QUICK_START.md  hetzner_deploy.py  hetzner_runner.yml  pyproject.toml  self-improve.py
.github/workflows/: hetzner_runner.yml
outputs/: CTO_PRESENTATION.md  INDEX.md
task1/: README.md  requirements.txt  self-improve.yml
task2/: hetzner_deploy.py
tests/: test_hetzner_deploy.py  test_self_improve.py
