[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "self-improvement"
version = "1.0.0"
description = "Autonomous repository self-improvement agent using Claude AI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Self-Improvement Agent", email = "agent@self-improvement.local" }
]
keywords = ["ai", "automation", "github", "claude", "self-improvement"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "anthropic>=0.28.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.0.250",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/your-username/self-improvement"
Repository = "https://github.com/your-username/self-improvement.git"
Issues = "https://github.com/your-username/self-improvement/issues"

[tool.setuptools]
packages = ["self_improvement"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
